-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b55
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082983 | emb-9 | David Lindholm | P4 | Resolved | Fixed | team |
| JDK-8297636 | openjdk8u362 | Volker Simonis | P4 | Resolved | Fixed | b05 |
| JDK-8358878 | shenandoah8u362 | Volker Simonis | P4 | Resolved | Fixed | b05 |
| JDK-8285732 | 8u351 | David Buck | P4 | Resolved | Fixed | b01 |
Many of the threads in hotspot now show their names in GDB because a call to os::set_native_thread_name has been made for those thread. The GC workers (instances of the GangWorker class in workgroup.hpp) inherits from "NamedThread", but they don't call os::set_native_thread_name. Remember that os::set_native_thread_name must be called after Thread::initialize_thread_local_storage.
- backported by
-
JDK-8082983 GC workers do not have thread names
-
- Resolved
-
-
JDK-8285732 GC workers do not have thread names
-
- Resolved
-
-
JDK-8297636 GC workers do not have thread names
-
- Resolved
-
-
JDK-8358878 GC workers do not have thread names
-
- Resolved
-
- blocks
-
JDK-8073545 Use shorter and more descriptive names for GC worker threads
-
- Resolved
-
(3 links to)