8073464: GC workers do not have thread names

Reviewed-by: brutisso, tschatzl